Fixed items alignment with pictures

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -69,17 +69,9 @@ nav ul li:last-child {
   padding-right: 0;
 }
 
-a {
+nav ul li a {
   text-decoration: none;
   padding: 1rem;
-}
-
-a:hover {
-  background-color: black;
-  color: whitesmoke;
-  transition:
-    background-color 1s ease-out 200ms,
-    color 400ms ease-out;
 }
 
 .headline {
@@ -179,20 +171,22 @@ button {
 
 .article {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-left: 1.5rem;
   width: 100%;
 }
 
-.article:last-child {
+.article:hover {
   background-color: hsla(0, 0%, 75%, 1);
+  transition:
+    background-color 200ms ease-in-out 200ms;
 }
 
 .article img {
   width: 35%;
   height: auto;
   display: block;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0 auto;
   padding: 1rem;
 }
 
@@ -202,6 +196,10 @@ button {
 
 .article h4 {
   margin-bottom: .5rem;
+}
+
+.article p {
+  margin-bottom: 1rem;
 }
 
 .article a {
